# EPITECH_PROJECTS

./: README.md
2018/CPE/CPE_BSQ_2018/: Makefile  clean_buf.c  fill_struct.c  final_square.c  initiate_clone.c  main.c  utils.c
2018/CPE/CPE_corewar_2018/: .gitignore  Makefile
2018/CPE/CPE_dante_2018/: .gitignore  Makefile
2018/CPE/CPE_getnextline_2018/: get_next_line.h
2018/CPE/CPE_lemin_2018/: .gitignore  Makefile  main.c
2018/CPE/CPE_matchstick_2018/: Makefile  artificial_int_play.c  errors.c  fill_board.c  finishing_artificial_play.c  main.c  my_get_nbr.c  player_interaction.c  print_board.c  utils.c
2018/CPE/CPE_pushswap_2018/: Makefile  check_order.c  initiate_array_struct.c  main.c  operations.c  transform.c  utils.c
2018/CPE/CPE_pushswap_bootstrap_2018/: Makefile  README.md  bubble_sort_array.c  intructions.c  rotate_left.c  rotate_right.c
2018/CPE/CPE_solostumper_2_2018/: Makefile  main.c  utils.c
2018/CPE/CPE_solostumper_3_2018/: Makefile  main.c
2018/MATH/101pong_2018/: Makefile  pong101.c
2018/MATH/103cipher_2018/: Makefile  fill_matrix.cpp  main.cpp  multiply_matrix.cpp  useful_function.cpp
2018/MATH/105torus_2018/: Makefile  main.cpp  torus.cpp  useful_function.cpp
2018/MUL_GRAPHICAL/MUL_my_radar_2018/: Makefile  check_collision.c  create_shapes.c  cut_screen.c  draw_planes.c  draw_towers.c  fill_aircraft_list.c  fill_tower_list.c  instructions.c  map  map.1  my_get_nbr.c  my_radar  my_radar.c  new_air_tow_list.c  read_map.c  update_tab_position.c
2018/MUL_GRAPHICAL/MUL_my_screensaver_2018/: Makefile  draw_circle.c  draw_discs.c  draw_line.c  fifth_anim.c  fill_main_struct.c  fill_spritext.c  sec_anim.c  (+9 more)
2018/WEB_epytodo_2018/: epytodo.sql  run.py
2019/ASM_minilibc_2019/: Makefile  memcpy.asm  memmove.asm  memset.asm  rindex.asm  strcasecmp.asm  strchr.asm  strcmp.asm  strcspn.asm  strlen.asm  strncmp.asm  strpbrk.asm
2019/OOP_arcade_2019/: GlobalHeaders.hpp  Makefile
2019/OOP_indie_studio_2019/: .gitignore  CMakeLists.txt
2019/OOP_indie_studio_2019/asset/: chaffee_tank.mtl  intensity.mtl  power_intensity.mtl  power_speed.mtl  tilted_bomb_9.mtl
2019/OOP_indie_studio_2019/doc/: Setup_SFML.txt
2019/OOP_indie_studio_2019/include/: EventReceiver.hpp  Game.hpp  Map.hpp  RNGenerator.hpp  Sound.hpp  Timer.hpp  Utils.hpp
2019/OOP_indie_studio_2019/include/Entities/: AI.hpp  BlastCube.hpp  Block.hpp  Bomb.hpp  EntityEnumeration.hpp  IEntity.hpp  Player.hpp
2019/OOP_indie_studio_2019/include/Entities/Powers/: Intensity.hpp  MagSize.hpp  Power.hpp  Speed.hpp
2019/OOP_indie_studio_2019/include/Menus/: ControlsScreen.hpp  CreditsScreen.hpp
2019/OOP_indie_studio_2019/include/Menus/MainMenu/: CreditsButton.hpp  LoadButton.hpp  PlayButton.hpp  QuitButton.hpp  SettingsButton.hpp  StartMenu.hpp
2019/OOP_indie_studio_2019/include/Menus/PlayerSelection/: LaunchButton.hpp  UIPlayerSelection.hpp
2019/OOP_indie_studio_2019/include/Menus/SettingsMenu/: MusicDownButton.hpp  MusicUpButton.hpp  SFXDownButton.hpp  SFXUpButton.hpp  SettingsMenu.hpp
2019/OOP_indie_studio_2019/include/Menus/TitleScreen/: TitleScreen.hpp
2019/OOP_indie_studio_2019/include/UI/: BackMenuButton.hpp  IButton.hpp  IUI.hpp  ResumeButton.hpp  SaveButton.hpp  UIEnd.hpp  UIEnumeration.hpp  UIManager.hpp  UIPauseMenu.hpp
2019/OOP_indie_studio_2019/save/: save.txt
2019/OOP_indie_studio_2019/src/: EventReceiver.cpp  Game.cpp  Map.cpp  Sound.cpp  Utils.cpp  main.cpp
2019/OOP_indie_studio_2019/src/Entities/: AI.cpp  BlastCube.cpp  Block.cpp  Bomb.cpp  Player.cpp
2019/OOP_indie_studio_2019/src/Entities/Powers/: Intensity.cpp  MagSize.cpp  Power.cpp  Speed.cpp
2019/OOP_indie_studio_2019/src/Menus/: ControlsScreen.cpp  CreditsScreen.cpp
2019/OOP_indie_studio_2019/src/Menus/MainMenu/: CreditsButton.cpp  LoadButton.cpp  PlayButton.cpp  QuitButton.cpp  SettingsButton.cpp  StartMenu.cpp
2019/OOP_indie_studio_2019/src/Menus/PlayerSelection/: LaunchButton.cpp  UIPlayerSelection.cpp
2019/OOP_indie_studio_2019/src/Menus/SettingsMenu/: MusicDownButton.cpp  MusicUpButton.cpp  SFXDownButton.cpp  SFXUpButton.cpp  SettingsMenu.cpp
2019/OOP_indie_studio_2019/src/Menus/TitleScreen/: TitleScreen.cpp
2019/OOP_indie_studio_2019/src/UI/: BackMenuButton.cpp  ResumeButton.cpp  SaveButton.cpp  UIEnd.cpp  UIManager.cpp  UIPauseMenu.cpp
2019/PSU_2019_malloc/: Makefile  calloc.c  free.c  malloc.c  meta.h  realloc.c  reallocarray.c  utils.c
2019/PSU_nmobjdump_2019/: .gitignore  Makefile
(+462 files in other folders)
